# dux_fixed

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: dux_fixed.h  fixed_int.cpp  fixed_int.h  fixed_rand.cpp  fixed_rand.h  fixed_trig.cpp  fixed_trig.h  fixed_vec2.cpp  fixed_vec2.h  fixed_vec3.cpp  fixed_vec3.h  grid_walking.cpp  grid_walking.h
test/: CMakeLists.txt  test.cpp  test_fint.cpp  test_fint.h  test_fixed_int.cpp  test_fixed_rand.cpp  test_fixed_rand.h  test_fixed_trig.cpp  test_fixed_trig.h  test_fixed_vec2.cpp  test_fixed_vec2.h  test_fvec2.cpp  test_grid_walking.cpp  test_grid_walking.h  test_trig.cpp  utils.cpp  utils.h
